// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRelatedConcepts should return correct result for CTPP 61428011000036109 1`] = `
Object {
  "concepts": Array [
    Object {
      "coding": Array [
        Object {
          "code": "53282011000036108",
          "display": "Paracetamol (Herron)",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "brand",
    },
    Object {
      "coding": Array [
        Object {
          "code": "57353011000036105",
          "display": "Paracetamol (Herron) 500 mg uncoated tablet, 500",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "BPG",
    },
    Object {
      "coding": Array [
        Object {
          "code": "63954011000036107",
          "display": "paracetamol 500 mg tablet, 500",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "UPG",
    },
    Object {
      "coding": Array [
        Object {
          "code": "54282011000036105",
          "display": "Paracetamol (Herron) 500 mg uncoated tablet",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "BPSF",
    },
    Object {
      "coding": Array [
        Object {
          "code": "23628011000036109",
          "display": "paracetamol 500 mg tablet",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "UPDSF",
    },
    Object {
      "coding": Array [
        Object {
          "code": "21433011000036107",
          "display": "paracetamol",
          "system": "http://snomed.info/sct",
        },
      ],
      "type": "UPD",
    },
  ],
  "relationships": Array [
    Object {
      "source": "61428011000036109",
      "target": "53282011000036108",
      "type": "has-brand",
    },
    Object {
      "source": "61428011000036109",
      "target": "57353011000036105",
      "type": "is-a",
    },
    Object {
      "source": "57353011000036105",
      "target": "63954011000036107",
      "type": "is-a",
    },
    Object {
      "source": "61428011000036109",
      "target": "54282011000036105",
      "type": "unknown",
    },
    Object {
      "source": "54282011000036105",
      "target": "23628011000036109",
      "type": "is-a",
    },
    Object {
      "source": "23628011000036109",
      "target": "21433011000036107",
      "type": "is-a",
    },
  ],
}
`;

exports[`getSubjectConcept should return correct result for CTPP 21062011000036103 1`] = `
Object {
  "coding": Array [
    Object {
      "code": "21062011000036103",
      "display": "Nexium Hp7 (14 x Nexium tablets, 28 x Amoxil capsules, 14 x Klacid tablets), 1 pack, composite pack",
      "system": "http://snomed.info/sct",
    },
    Object {
      "code": "97190",
      "system": "https://www.tga.gov.au/australian-register-therapeutic-goods",
    },
  ],
  "type": "BPGC",
}
`;

exports[`getSubjectConcept should return correct result for CTPP 61428011000036109 1`] = `
Object {
  "coding": Array [
    Object {
      "code": "61428011000036109",
      "display": "Paracetamol (Herron) 500 mg uncoated tablet, 500, bottle",
      "system": "http://snomed.info/sct",
    },
    Object {
      "code": "82690",
      "system": "https://www.tga.gov.au/australian-register-therapeutic-goods",
    },
  ],
  "type": "BPGC",
}
`;

exports[`getSubjectConcept should return correct result for substance 2292011000036106 1`] = `
Object {
  "coding": Array [
    Object {
      "code": "2292011000036106",
      "display": "loratadine",
      "system": "http://snomed.info/sct",
    },
  ],
  "type": "substance",
}
`;
